@@ -17,6 +17,8 @@ xine-lib (1.1.4)
     Kay. [bug #1603503]
   * Fix program termination due to invalid Real Media SDP; reported by Roland
     Kay. [bug #1602663]
+  * Fix invalid memory access in Real Media SDP with tailored stream; reported
+    by Roland Kay. [bug #1602631]
 
 xine-lib (1.1.3)
   * Security fixes:
